# SumiLib

./: CMakeLists.txt  KarpMidi.cpp  KarpMidi.h  main.cpp  tests.cpp
rtmidi/: CMakeLists.txt  Makefile  cmake_install.cmake  cmidiin.cpp
